# Arcade-Learning-Environment-C-API

./: .gitignore  CMakeLists.txt  README.md  test_c.c
src/ale/: CMakeLists.txt  ale_c_interface.cpp  ale_c_interface.h  ale_interface.hpp  ale_test.c
